--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw/rules/bw/NumberOfActivities.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw/rules/bw/NumberOfActivities.html
@@ -1,1 +1,7 @@
-<p>This rule checks the number of activities within a process, too many activities reduces the process readability</p>
+<p>Several reasons lies beneath limiting the number of activities in a process:</p>
+
+<ul>
+    <li>Readability: Too many activities makes difficult the visibility and update of a process.</li>
+    <li>Reusability: small processes are better reused than big ones.</li>
+    <li>Job paging configuration: engine job paging parameters are based on the number of activities of a process.</li>
+</ul>
