--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/BwSharedResourceParameterRequired.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/BwSharedResourceParameterRequired.html
@@ -1,9 +1,7 @@
-<p>Shared Resource Attributes should be defined using Global Variables.</p>
+<p>Atributos de los Shared Resource deberían ser definidos utilizando Global Variables.</p>
 
-<p>Different values for every environment (Dev, Pre, UAT, Prod, etc) can be set though.</p>
+<p>Diferentes valores para cada entorno (Dev, Pre, UAT, Prod, etc) puede ser especificados.</p>
 
-<p>Hardcoded values, even if possible are highly discouraged.</p>
+<p>Valores Hardcoded es algo muy desaconsejado.</p>
 
-<p> By Default, <code>Domain</code>, <code>Deployment</code> are excluded and any other included
-    in the pattern defined.</p>
-
+<p> Por defecto, <code>Domain</code>, <code>Deployment</code> son excluídos y otras incluidos en el patrón.</p>
