--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/BwSharedVariableNotUsed.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/BwSharedVariableNotUsed.html
@@ -1,1 +1,3 @@
-<p>Process Activities can use Shared Variables. When deleting those artifacts, Shared Variables can be left unused, which difficulties maintainability of the project.</p>
+<p>Los atributos de los recursos compartidos y propieades de las actividades deberían ser configurados utilizando Shared Variables 
+   Cuando dichos recursos o actividades se eliminan, muchas veces se quedan las variables, lo que dificulta el mantenimiento de los proyectos.
+</p>
