--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/CheckpointAfterJDBCÇheck.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/CheckpointAfterJDBCÇheck.html
@@ -1,1 +1,5 @@
-This rule checks the placement of a Checkpoint activity within a process. Do not place checkpoint after or in a parallel flow of Query activities or idempotent activities. Database operations such as Update, Insert and Delete are considered non-idempotent operations. You should always place a checkpoint immediately after any database insert or update activity to persist the response. However, for queries, there is no need to place checkpoints
+<p>Esta regla comprueba la existencia de una actividad Checkpoint como parte del proceso. 
+    No debería ponerse actividades checkpoints despues o en paralelo a llamadas a Queries JDBC.
+    Las llamadas a Update, Insert, Delete son consideradas como no idempotentes. 
+    Debería ponerse despues de cada actividad de este tipo, pero no ocurre lo mismo con la Select JDBC.
+</p>
