--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/CheckpointAfterRESTCheck.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/CheckpointAfterRESTCheck.html
@@ -1,1 +1,3 @@
-This rule checks the placement of a Checkpoint activity within a process. Do not place checkpoint after or in a parallel flow of REST webservice call.
+<p>Esta regla comprueba la existencia de una actividad Checkpoint como parte del proceso. 
+    No debería ponerse actividades checkpoints despues o en paralelo a llamadas a servicios REST.
+</p>
