--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/ChoiceWithNoOtherwise.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/ChoiceWithNoOtherwise.html
@@ -1,1 +1,1 @@
-This rule checks all activities input mapping for choice statement. As a coding best practice, the choice statement should always include the option otherwise.
+<p>Esta regla comprueba todas los mapeos actividades que tengan una sentencia choice. Como una best-practice todas las sentencias choice deben incluir un modo otherwise.</p>
