--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/ForEachGroup.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/ForEachGroup.html
@@ -1,1 +1,2 @@
-This rule checks the ForEach group. It is recommended to use For-Each activity input mapping instead of using For-Each/Iteration Group wherever possible. Do not use iteration groups just for mapping repeating elements.
+<p>Esta regla comprueba la existencia de un grupo ForEach. Es recomendable utilizar for-each como parte del mapeo interno en lugar de grupos de ForEach.
+</p>
