--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/ForEachMapping.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/ForEachMapping.html
@@ -1,1 +1,1 @@
-This rule checks the Input mappings of activities. In activity Input mapping for performance reasons, it is recommended ato use Copy-Of instead of For-Each whenever possible.
+<p>Esta regla comprueba los mapeos de entrada de las activiades. Por motivos de performances es recomendable utilizar Copy-Of en lugar de For-Each siempre que sea posible.</p>
