--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/JDBCHardCoded.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/JDBCHardCoded.html
@@ -1,1 +1,1 @@
-This rule checks JDBC activities for hardcoded values for fields Timeout and MaxRows. Use Process property or Module property.
+<p>Esta regla permite comprobar si las activiades JDBC utilizan valor harcoded para los campos Timeout and MaxRows. Debe utilizarse Process property o Module property.</p>
