--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/JDBCWildcards.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/JDBCWildcards.html
@@ -1,1 +1,2 @@
-This rule checks whether JDBC activities are using wildcards in the query. As a good coding practice, never use wildcards in JDBC queries.
+<p>Esta regla comprueba si las actividades JDBC utilizan wildcards en la definición de la query.
+    Como una buena práctica de desarrollo, nunca utilice wildcards en queries JDBC.</p>
