--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/JMSAcknowledgementMode.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/JMSAcknowledgementMode.html
@@ -1,1 +1,1 @@
-This rule checks the acknowledgement mode used in JMS activities. Avoid using Auto Acknowledgement to minimize the risk of data loss.
+<p>Esta regla comprueba el modo de ACK utilizado en las activiades JMS. Debe minimizarse el uso de Auto Acknowledgement para minimizar el riesgo de pérdida de datos.</p>
