--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/JMSHardCoded.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/JMSHardCoded.html
@@ -1,1 +1,1 @@
-This rule checks JMS activities for hardcoded values for fields Timeout, Destinaton, Reply to Destination, Message Selector, Polling Interval. Use Process property or Module property.
+<p>Esta regla comprueba si se utilizan valores hardcoded para los campos Timeout, Destinaton, Reply to Destination, Message Selector, Polling Interval. Debería utilizarse una Process property or Module property.</p>
