--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/LogSubprocess.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/LogSubprocess.html
@@ -1,1 +1,1 @@
-If there is logging or auditing required at multiple points in your project, its advised to write logging and auditing code in a sub process and invoke this process from any point where this functionality is required. This rule checks whether LOG activity is used in sub process.
+<p>Si hay actividades de logging o auditoría que se requieren en puntos del proceso es recomendable crear subprocesos para gestionar dichas tareas. Esta regla comprueba si se utilizan actividades de log en procesos de pirmer nivel. </p>
