--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/NumberOfExposedServices.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/NumberOfExposedServices.html
@@ -1,1 +1,2 @@
-This rule checks the number of exposed services within a process. It is a good design practice to construct not more than 5 services in the same process.
+<p> Esta regla comprueba el número de servicios expuestos por un proceso.
+    Es una buena práctica no construir un número excesivo de servicios en el mismo proceso.</p>
