--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/NumberofActivitiesCheck.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/NumberofActivitiesCheck.html
@@ -1,7 +1,7 @@
-<p>Several reasons lies beneath limiting the number of activities in a process:</p>
+<p>Diferentes razones subyacen bajo la limitacion del númeor máximo de actividades opr proceso:</p>
 
 <ul>
-    <li>Readability: Too many activities makes difficult the visibility and update of a process.</li>
-    <li>Reusability: small processes are better reused than big ones.</li>
-    <li>Job paging configuration: engine job paging parameters are based on the number of activities of a process.</li>
+    <li>Readability: Un número muy alto de actividades dificulta la lectura y mantenibilidad del proyecto.</li>
+    <li>Reusability: Procesos pequeños son más reutilizables que los grandes .</li>
+    <li>Job paging configuration: Engine Job parametros están basados en el número de acitvidades del proceso.</li>
 </ul>
