--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/ProcessName.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/ProcessName.html
@@ -1,1 +1,2 @@
-@Rule(
+<p>Los nombres de los procesos no deben de incluir caracteres prohibidos. Esta regla es compatible con la definición de un estándar de nomenclatura y se refiere a validacionesp uramente técnicas</p>
+    
