--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/ProcessNoDescription.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/ProcessNoDescription.html
@@ -1,1 +1,1 @@
-This rule checks if there is description specified for a process.
+<p> Los procesos deben completar su descripción para aumentar la mantenibilidad del codigo</p>
