--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/SharedResourceNotFilled.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/SharedResourceNotFilled.html
@@ -1,5 +1,5 @@
-<p>Some Shared Resources attibutes in TIBCO BusinessWorks are optional, but the best practice is to be defined, even with the default value.</p>
+<p>Alguno de los parametros de configuración del os Shared Resources son opcionales, pero como una best practice deben ser definidos incluso aunque tenga el valor por defecto </p>
 
-<p>The reason for this rule is to avoid unwanted behaviour on default not known values, one example:</p>
+<p>La razon de esta regla es evitar comportamientos no deseados en runtime basado en valores de parametros que se desconocen o no se gestionan. Un ejemplo:</p>
 
-<p>JDBC Maximum number of connections bad configuration can lead to a Database connection resources exhaustion because of processes that are not critical to business.</p>
+<p>Numero máximo de conexiones JDBC pueden derivar a errores en cuanto a conexiones con una base de datos debido a extenuación de los recursos.</p>
