--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/SharedResourceNotUsingGV.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/SharedResourceNotUsingGV.html
@@ -1,3 +1,3 @@
-<p>Shared Resource Attributes should be defined using Global Variables.</p>
-<p>Different values for every environment (Dev, Pre, UAT, Prod, etc) can be set though.</p>
-<p>Hardcoded values, even if possible are highly discouraged.</p>
+<p>Los parametros de los Shared Resource deberían ser descritos utilizando Variables Globales.</p>
+<p>Permite establecer diferentes valores para los diferentes entornos (DEV, PRE, PRO, UAT, etc) </p>
+<p>Valores hardocdeados incluso cuando son válidos están altamente desaconsejados.</p>
