--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/SharedResourcesNotUsed.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/SharedResourcesNotUsed.html
@@ -1,1 +1,1 @@
-<p>Shared Resources which are not used in the project makes tough the maintainability of the project, and consumes unnecessary resources at runtime.</p>
+<p>Los Shared Resources que no se utilizan dfiicultan el mantenimiento del proyecto  y consume recursos innecesarios en runtime.</p>
