--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/TransitionLabels.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/TransitionLabels.html
@@ -1,1 +1,1 @@
-<p>Conditional transitions should be described, more than with the default XPath function. Otherwise, the real cause for the transition would be obscure.</p>
+<p>Transiciones condicionales deben ser descritas más allá del uso de la propia función XPath. Sin embargo, el motivo de la transición puede quedar camuflada y oculta </p>
