--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/TransitionsConditionalWithoutOtherwise.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/TransitionsConditionalWithoutOtherwise.html
@@ -1,1 +1,1 @@
-<p>Conditional transitions from an Process Activity must cover all different branches. Otherwise transition enforces this behavior.</p>
+<p>Transiciones condicionales desde un proceso de actividad deben cubrir todas las opciones. El uso de "Otherwise" en la transición refuerza este comportamiento</p>
