--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw/rules/bw/ProcessVersionCheck.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw/rules/bw/ProcessVersionCheck.html
@@ -1,1 +1,1 @@
-<p>Project version must follow the pattern defined by the rule.
+<p>Project version must follow the pattern defined by the rule.</p>
