--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/BwXPathCustomFilter.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/BwXPathCustomFilter.html
@@ -1,9 +1,2 @@
-<p>Shared Resource Attributes should be defined using Global Variables.</p>
-
-<p>Different values for every environment (Dev, Pre, UAT, Prod, etc) can be set though.</p>
-
-<p>Hardcoded values, even if possible are highly discouraged.</p>
-
-<p> By Default, <code>Domain</code>, <code>Deployment</code> are excluded and any other included
-    in the pattern defined.</p>
+<p>Definición de una regla custom sobre los objetos del proceso, permiten extender las reglas disponibles</p>
 
