--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/MultipleTransitions.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/MultipleTransitions.html
@@ -1,1 +1,4 @@
-EMPTY activity should be used if you want to join multiple transition flows. For example, there are multiple transitions out of an activity and each transition takes a different path in the process. In this scenario you can create a transition from the activity at the end of each path to an Empty activity to resume a single flow of execution in the process. This rule checks whether multiple transitions from an activity in a parallel flow merge into EMPTY activity
+<p>Actividades EMPTY deben ser utilizados para unir diferentes transiciones. 
+    Por ejemplo, hay multiples actividades de salida de una actividad, y cada una de ellas toma un diferente rumbo en el proceso.
+    En este escenario puedes crear una transicion desde la actividad al final del flujo a una actividad Empyy para volver a crear el flujo único de ejecución en el proceso.
+    Esta regla comprueba si multiples transiciones desde un actividad en paralelo se unen en una actividad Empty.</p>
