--- a/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/ProjectProfileConvention.html
+++ b/sonar-businessworks6-plugin/src/main/resources/org/sonar/l10n/bw_es/rules/bw/ProjectProfileConvention.html
@@ -1,3 +1,3 @@
-<p>Corporate guidelines have to be defined to standardize the project structure and naming conventions for resources, processes, activities, etc.</p>
+<p>Estandares de nomenclatura deben ser definidos para estandarizar la estructura de proyectos y el formato de nombrado para procesos, recursos, actividades, etc.</p>
 
-<p>These guidelines have to be followed by the different developers, enhancing the maintainability of the whole set of TIBCO BusinessWorks code.</p>
+<p>Estos estandares deben ser seguidos por los diferentes desarrolladores para facilitar el mantenimiento de todos los recursos  TIBCO BusinessWorks.</p>
